; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mtrr.c_pat_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mtrr.c_pat_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPUID_FEATURE_PAT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@MSR_IA32_CR_PAT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"CPU%d PAT: was 0x%016llx\0A\00", align 1
@CACHE_CONTROL_PAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pat_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @cpuid_features()
  %4 = load i32, i32* @CPUID_FEATURE_PAT, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  br label %26

8:                                                ; preds = %0
  %9 = load i32, i32* @FALSE, align 4
  %10 = call i32 @ml_set_interrupts_enabled(i32 %9)
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* @MSR_IA32_CR_PAT, align 4
  %12 = call i32 @rdmsr64(i32 %11)
  store i32 %12, i32* %2, align 4
  %13 = call i32 (...) @get_cpu_number()
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @DBG(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = sext i32 %16 to i64
  %18 = and i64 %17, -4222124650659841
  %19 = icmp ne i64 %18, 281474976710656
  br i1 %19, label %20, label %23

20:                                               ; preds = %8
  %21 = load i32, i32* @CACHE_CONTROL_PAT, align 4
  %22 = call i32 @mtrr_update_action(i32 %21)
  br label %23

23:                                               ; preds = %20, %8
  %24 = load i32, i32* %1, align 4
  %25 = call i32 @ml_set_interrupts_enabled(i32 %24)
  br label %26

26:                                               ; preds = %23, %7
  ret void
}

declare dso_local i32 @cpuid_features(...) #1

declare dso_local i32 @ml_set_interrupts_enabled(i32) #1

declare dso_local i32 @rdmsr64(i32) #1

declare dso_local i32 @DBG(i8*, i32, i32) #1

declare dso_local i32 @get_cpu_number(...) #1

declare dso_local i32 @mtrr_update_action(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
